<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:fontFamily="monospace"
        android:layout_gravity="center"
        android:textSize="50dp"/>

        <EditText
            android:id="@+id/usernameId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="26sp"
            android:padding="10dp"
            android:hint="@string/username"/>

    <EditText
        android:id="@+id/useremail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="26sp"
        android:padding="10dp"
        android:inputType="text"
        android:hint="@string/Email"/>


    <EditText
        android:id="@+id/userpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="26sp"
        android:padding="10dp"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <EditText
        android:id="@+id/userConfrimPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="26sp"
        android:padding="10dp"
        android:inputType="textPassword"
        android:hint="@string/confrimPassword"/>


        <Spinner
            android:id="@+id/locationSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Spinner>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:backgroundTint="@color/colorburger"
        android:textColor="@color/colorWhite"
        android:layout_margin="10dp"
        android:text="@string/confirm"
        android:textSize="26sp"
        android:padding="10dp"
        android:layout_gravity="center" />


    <TextView
        android:id="@+id/textlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gotologintxt"
        android:layout_gravity="center" />

    </LinearLayout>

</ScrollView>