<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/loginlogo"/>


    <EditText
        android:id="@+id/loginusernme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/username"
        android:padding="10dp"
        android:textSize="26sp"
           />


    <EditText
        android:id="@+id/loginpswrd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="26sp"
       />


    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorburger"
        android:layout_margin="10dp"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="26sp"
        android:padding="10dp"
        android:layout_gravity="end"
        />

    <TextView
        android:id="@+id/textlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gotosignintxt"
        android:layout_gravity="center"
        android:onClick="signinText"
        android:textSize="20sp"/>


</LinearLayout>